--- a/app/views/static_pages/help.html.haml
+++ b/app/views/static_pages/help.html.haml
@@ -1,2 +1,5 @@
-%h1 StaticPages#help
-%p Find me in app/views/static_pages/help.html.haml
+- provide(:title, "Help")
+%h1 Help
+%p
+  :markdown
+    Get help on the Ruby on Rails Tutorial at the [Rails Tutorial help page](http://railstutorial.org/help). To get help on this sample app, see the [Rails Tutorial book](http://railstutorial.org/book)
