--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,2 +1,5 @@
-%h1 StaticPages#home
-%p Find me in app/views/static_pages/home.html.haml
+- provide(:title, 'Home')
+%h1 Sample App
+%p
+  :markdown
+    This is the home page for the [Ruby on Rails Tutorial](http://railstutorial.org/) sample application.
