--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,4 +1,9 @@
-%h1 Sample App
-%p
-  :markdown
-    This is the home page for the [Ruby on Rails Tutorial](http://railstutorial.org/) sample application.
+.center.hero-unit
+  %h1 Welcome to the Sample App
+  %h2
+    :markdown
+      This is the home page for the [Ruby on Rails Tutorial](http://railstutorial.org/) sample application.
+
+  = link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary"
+
+= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/'
