--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,10 +1,13 @@
+%hr
+
 %footer.footer
-  %small
+  %small.pull-left
     %a{href: 'http://railstutorial.org/'} Rails Tutorial
     by Michael Hartl
-  %nav
-    %ul
+  %nav.pull-right
+    %ul.list-unstyled.list-inline
       %li= link_to "About", about_path
       %li= link_to "Contact", contact_path
       %li
         %a{href: 'http://news.railstutorial.org/'} News
+  .clearfix
