--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,9 +1,27 @@
-%header.navbar.navbar-fixed-top.navbar-inverse
-  .navbar-inner
-    .container
-      = link_to "sample app", root_path, id: "logo"
-      %nav
-        %ul.nav.pull-right
-          %li= link_to "Home", root_path
-          %li= link_to "Help", help_path
-          %li= link_to "Sign in", '#'
+%nav.navbar.navbar-fixed-top.navbar-inverse{role: 'navigation'}
+  .navbar-header
+    %button.navbar-toggle{data: {toggle: 'collapse', target: '.navbar-collapse'}}
+      %span.sr-only Toggle Navigation
+      %span.icon-bar
+      %span.icon-bar
+      %span.icon-bar
+    = link_to "sample app", root_path, id: "logo", class: 'navbar-brand'
+  .collapse.navbar-collapse
+    %ul.nav.navbar-nav
+      %li= link_to "Home", root_path
+      %li= link_to "Help", help_path
+      
+      - if signed_in?
+        %li= link_to "Users", '#'
+        %li.dropdown
+          %a.dropdown-toggle{href: '#', "data-toggle" => "dropdown"}
+            Account
+            %b.caret
+          %ul.dropdown-menu
+            %li= link_to "Profile", current_user
+            %li= link_to "Settings", '#'
+            %li.divider
+            %li= link_to "Sign out", signout_path, method: "delete"
+            
+      - else
+        %li= link_to "Sign in", signin_path
