--- a/app/views/shared/_error_messages.html.haml
+++ b/app/views/shared/_error_messages.html.haml
@@ -1,6 +1,8 @@
 - if @user.errors.any?
-  #error_explanation
-    .alert.alert-error The form contains #{pluralize(@user.errors.count, "error")}.
-    %ul
-      - @user.errors.full_messages.each do |msg|
-        %li * #{msg}
+  .panel.panel-danger#error_explanation
+    .panel-heading
+      %h3.panel-title The form contains #{pluralize(@user.errors.count, "error")}.
+    .panel-body
+      %ul
+        - @user.errors.full_messages.each do |msg|
+          %li= msg
