--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,9 +1,9 @@
-.center.hero-unit
+.jumbotron
   %h1 Welcome to the Sample App
-  %h2
+  %p
     :markdown
       This is the home page for the [Ruby on Rails Tutorial](http://railstutorial.org/) sample application.
 
-  = link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary"
+  %p= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary"
 
 = link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/'
