--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -2,20 +2,13 @@
 %h1 Sign up
 
 .row
-  .span6.offset3
-    = form_for(@user) do |f|
+  .col-md-6.col-md-offset-3
+    = simple_form_for @user do |f|
       = render 'shared/error_messages'
 
-      = f.label :name
-      = f.text_field :name
+      = f.input :name
+      = f.input :email
+      = f.input :password
+      = f.input :password_confirmation, label: 'Confirmation'
 
-      = f.label :email
-      = f.text_field :email
-
-      = f.label :password
-      = f.password_field :password
-
-      = f.label :password_confirmation, "Confirmation"
-      = f.password_field :password_confirmation
-
-      = f.submit "Create my account", class: "btn btn-large btn-primary"
+      %button.btn.btn-default{ type: 'submit' } Create my account
